--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,11 @@
 version: 2.1
-
 jobs:
-  build: 
-    machine:
-      image: windows-default # Windows machine image
-    resource_class: windows.medium
+  build:
+    docker: 
+      - image: cimg/node:14.10.1 # the primary container, where your job's commands are run
+        auth:
+          username: mydockerhub-user
+          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
     steps:
-        - checkout
-        - run: Write-Host 'Hello, Windows'
+      - checkout # check out the code in the project directory
+      - run: echo "hello world"
