--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,4 +8,8 @@ jobs:
       - run: yarn global add node-gyp && yarn install
       - restore_cache:
           keys:
-            - npm-v1-dependencies-{{ checksum "yarn.lock" }}
+            - npm-v1-dependencies-{{ checksum "yarn.lock" }
+      - save_cache:
+          keys:
+            - npm-v1-dependencies-{{ checksum "yarn.lock" }
+ 
