--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,3 @@
-workflows:
 version: 2.1
 jobs:
   build:
@@ -9,13 +8,11 @@ jobs:
       - restore_cache:
           key: yarn-packages-{{ checksum "yarn.lock" }}
       - run: yarn global add node-gyp && yarn install
-      - run: yarn lint && yarn format:check
-      - run: yarn test:ci
       - save_cache:
           key: yarn-packages-{{ checksum "yarn.lock" }}      
           paths:
             - ./node_modules
-  install:
+  test:
     requires: 
       - build
     steps: 
@@ -29,5 +26,13 @@ jobs:
           paths:
             - ./node_modules
     
+workflows:
+  version: 2.1
+  build_and_test:
+    jobs:
+      - build
+      - test:
+        requires:
+          - build
 
  
