--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,10 +13,10 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: yarn-packages-{{ checksum "yarn.lock" }}
+          key: yarn-packages-v2{{ checksum "yarn.lock" }}
       - run: yarn global add node-gyp && yarn install
       - save_cache:
-          key: yarn-packages-{{ checksum "yarn.lock" }}      
+          key: yarn-packages-v2{{ checksum "yarn.lock" }}      
           paths:
             - ./node_modules
   tests:
@@ -25,10 +25,10 @@ jobs:
     steps: 
       - checkout
       - restore_cache:
-          key: yarn-packages-{{ checksum "yarn.lock" }}
+          key: yarn-packages-v2{{ checksum "yarn.lock" }}
       - run: yarn lint && yarn format:check
       - run: yarn test:ci
       - save_cache:
-          key: yarn-packages-{{ checksum "yarn.lock" }}      
+          key: yarn-packages-v2{{ checksum "yarn.lock" }}      
           paths:
             - ./node_modules
