splitted test and lint into 2 jobs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,9 @@ workflows:
   build_and_test:
     jobs:
       - build
+      - lint:
+          requires:
+            - build
       - tests:
           requires:
             - build
@@ -26,9 +29,21 @@ jobs:
       - checkout
       - restore_cache:
           key: yarn-packages-v2{{ checksum "yarn.lock" }}
-      - run: yarn lint && yarn format:check
       - run: yarn test:ci
       - save_cache:
           key: yarn-packages-v2{{ checksum "yarn.lock" }}      
           paths:
             - ./node_modules
+  lint:
+    docker:
+      - image: cimg/node:14.10.1
+    steps:
+      - checkout
+      - restore_cache:
+          key: yarn-packages-v2{{ checksum "yarn.lock" }}
+      - run: yarn lint && yarn format:check
+      - save_cache:
+          key: yarn-packages-v2{{ checksum "yarn.lock" }}      
+          paths:
+            - ./node_modules
+
