--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ jobs:
           paths:
             - ./node_modules
   db:
-    - image: cimg/node:14.10.1
+    - image: circleci/postgres:9.6-alpine
       environment:
         DATABASE_URL: postgres://$PG_USER@localhost:5432/$PG_DB
         JWT_SECRET: yeet
@@ -72,7 +72,9 @@ jobs:
           key: yarn-packages-v2{{ checksum "yarn.lock" }}      
           paths:
             - ./node_modules
-  e2e: 
+  e2e:
+    docker:
+      - image: cimg/node:14.10.1 
     steps:
       - checkout
       - restore_cache:
