--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,7 @@ jobs:
             - ./node_modules
   db:
     docker:
-      - image: circleci/postgres:9.6-alpine
+      - image: circleci/postgres:alpine
         environment:
           PG_USER: circleci-demo-go
           PG_DB: circle_test 
@@ -68,18 +68,19 @@ jobs:
             - ./node_modules
   e2e:
     docker:
-      - image: cimg/node:14.10.1
-        environment:
-          DATABASE_URL: postgres://$PG_USER@localhost:5432/$PG_DB
-          JWT_SECRET: yeet
-          API_PORT: 3000
-          API_HOST: localhost
-          API_PROTOCOL: http 
+      - image: cimg/node:14.10.1 
     steps:
       - checkout
       - restore_cache:
           key: yarn-packages-v2{{ checksum "yarn.lock" }}
-      - run: yarn test:e2e      
+      - run: 
+          command: yarn test:e2e  
+          environment:
+            DATABASE_URL: postgres://$PG_USER@localhost:5432/$PG_DB
+            JWT_SECRET: yeet
+            API_PORT: 3000
+            API_HOST: localhost
+            API_PROTOCOL: http
       - save_cache:
           key: yarn-packages-v2{{ checksum "yarn.lock" }}      
           paths:
