--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,7 +76,7 @@ jobs:
       - run: 
           command: yarn test:e2e  
           environment:
-            DATABASE_URL: postgres://$PG_USER@localhost:5432/$PG_DB
+            DATABASE_URL: postgres://${PG_USER}@localhost:5432/${PG_DB}
             JWT_SECRET: yeet
             API_PORT: 3000
             API_HOST: localhost
