--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,8 +55,8 @@ jobs:
       - image: circleci/postgres:alpine
         environment:
           PG_USER: circleci-demo-go
-          PG_DB: circle_test 
-
+          PG_DB: circle_test
+          PG_PWD: toto
     steps:
       - checkout
       - restore_cache:
@@ -76,7 +76,7 @@ jobs:
       - run: 
           command: yarn test:e2e  
           environment:
-            DATABASE_URL: postgres://${PG_USER}@localhost:5432/${PG_DB}
+            DATABASE_URL: postgres://${PG_USER}:${PG_PWD}@localhost:5432/${PG_DB}
             JWT_SECRET: yeet
             API_PORT: 3000
             API_HOST: localhost
