--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,9 +54,9 @@ jobs:
     docker:
       - image: circleci/postgres:alpine
         environment:
-          PG_USER: circleci-demo-go
-          PG_DB: circle_test
-          PG_PWD: toto
+          POSTGRES_USER: circleci-demo-go
+          POSTGRES_DB: circle_test
+          POSTGRES_PWD: toto
     steps:
       - checkout
       - restore_cache:
@@ -76,7 +76,7 @@ jobs:
       - run: 
           command: yarn test:e2e  
           environment:
-            DATABASE_URL: postgres://${PG_USER}:${PG_PWD}@localhost:5432/${PG_DB}
+            DATABASE_URL: postgres://circleci-demo-go:toto@localhost:5432/circle_test
             JWT_SECRET: yeet
             API_PORT: 3000
             API_HOST: localhost
