--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,12 +49,13 @@ jobs:
             - ./node_modules
   e2e:
     docker:
-      - image: cimg/node:14.10.1
-      - image: circleci/postgres:alpine
-        environment:
-          POSTGRES_USER: circleci-demo-go
-          POSTGRES_DB: circle_test
-          POSTGRES_PASSWORD: toto 
+      - images: 
+        - cimg/node:14.10.1
+        - circleci/postgres:alpine
+          environment:
+            POSTGRES_USER: circleci-demo-go
+            POSTGRES_DB: circle_test
+            POSTGRES_PASSWORD: toto 
     steps:
       - checkout
       - restore_cache:
