--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,8 @@ workflows:
           requires:
             - build
       - e2e:
+          requires:
+            - build 
 jobs:
   build:
     docker:
@@ -49,13 +51,7 @@ jobs:
             - ./node_modules
   e2e:
     docker:
-      - image: cimg/node:14.10.1
-      
-      - image: circleci/postgres:alpine
-        environment:
-          POSTGRES_USER: circleci-demo-go
-          POSTGRES_DB: circle_test
-          POSTGRES_PASSWORD: toto 
+      - image: cimg/node:14.10.1 
     steps:
       - checkout
       - restore_cache:
