--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,38 +12,38 @@ workflows:
       - e2e:
           requires:
             - build 
+version: 2.1
 jobs:
-  build:
-    docker:
-      - image: cimg/node:14.10.1
-    steps:
-      - checkout
-      - restore_cache:
-          key: yarn-packages-v2{{ checksum "yarn.lock" }}
-      - run: yarn global add node-gyp && yarn install
-      - save_cache:
-          key: yarn-packages-v2{{ checksum "yarn.lock" }}      
-          paths:
-            - ./node_modules
-  tests:
-    docker:
-      - image: cimg/node:14.10.1
-    steps: 
-      - checkout
-      - restore_cache:
-          key: yarn-packages-v2{{ checksum "yarn.lock" }}
-      - run: yarn test:ci
-
-  lint:
-    docker:
-      - image: cimg/node:14.10.1
-    steps:
-      - checkout
-      - restore_cache:
-          key: yarn-packages-v2{{ checksum "yarn.lock" }}
-      - run: yarn lint && yarn format:check
-  e2e:
-    docker:
+    build:
+        docker:
+            - image: cimg/node:14.10.1
+        steps:
+            - checkout
+            - restore_cache:
+                key: yarn-packages-v2{{ checksum "yarn.lock" }}
+            - run: yarn global add node-gyp && yarn install
+            - save_cache:
+                key: yarn-packages-v2{{ checksum "yarn.lock" }}
+                paths:
+                    - ./node_modules
+    check_format:
+        docker:
+            - image: cimg/node:14.10.1
+        steps:
+            - checkout
+            - restore_cache:
+                key: yarn-packages-v2{{ checksum "yarn.lock" }}
+            - run : yarn lint && yarn format:check
+    test:
+        docker:
+            - image: cimg/node:14.10.1
+        steps:
+            - checkout
+            - restore_cache:
+                key: yarn-packages-v2{{ checksum "yarn.lock" }}
+            - run : yarn test:ci
+    e2e:
+        docker:
             - image: cimg/node:14.10.1
             - image: circleci/postgres
               environment:
