--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,6 @@ workflows:
             - e2e
             - lint
             - test
-      
 jobs:
     build:
         docker:
@@ -76,7 +75,7 @@ jobs:
         environment:
             IMAGE_NAME: sgttabouret/my-awesome-ci-expr
         docker:
-            image: circleci/buildpack-deps:stretch
+            - image: circleci/buildpack-deps:stretch
         steps: 
             - checkout
             - setup_remote_docker
@@ -86,5 +85,3 @@ jobs:
                 root: .
                 paths:
                     - ./image.tar         
-    
-
