--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,9 @@ workflows:
             - e2e
             - lint
             - test
+      - publish_image:
+          requires:
+            - build_docker
 jobs:
     build:
         docker:
@@ -85,3 +88,15 @@ jobs:
                 root: .
                 paths:
                     - ./image.tar         
+    publish_image:
+        steps:
+            - attach_workspace:
+                at: /tmp/workspace
+            - setup_remote_docker
+            - run: 
+                name: Login and Publish to Docker Hub
+                command: 
+                    docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASS
+                    docker tag $IMAGE_NAME:latest $IMAGE_NAME:$CIRCLE_BUILD_NUM
+                    docker push $IMAGE_NAME
+
