forgot env and docker image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,6 +89,10 @@ jobs:
                 paths:
                     - ./image.tar         
     publish_image:
+        environment:
+            IMAGE_NAME: sgttabouret/my-awesome-ci-expr
+        docker:
+            - image: circleci/buildpack-deps:stretch
         steps:
             - attach_workspace:
                 at: /tmp/workspace
