--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -99,7 +99,7 @@ jobs:
             - setup_remote_docker
             - run: 
                 name: Login and Publish to Docker Hub
-                command: 
+                command: |
                     docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASS
                     docker tag $IMAGE_NAME:latest $IMAGE_NAME:$CIRCLE_BUILD_NUM
                     docker push $IMAGE_NAME
