--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,6 +97,7 @@ jobs:
             - attach_workspace:
                 at: /tmp/workspace
             - setup_remote_docker
+            - run: docker load -i /tmp/workspace/image.tar
             - run: 
                 name: Login and Publish to Docker Hub
                 command: |
