--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,5 +103,7 @@ jobs:
                 command: |
                     echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
                     docker tag $IMAGE_NAME:latest $IMAGE_NAME:$CIRCLE_BUILD_NUM
+                    docker tag $IMAGE_NAME:app $IMAGE_NAME:latest
+                    docker push $IMAGE_NAME:latest
                     docker push $IMAGE_NAME
 
