--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -105,5 +105,5 @@ jobs:
                     docker tag $IMAGE_NAME:latest $IMAGE_NAME:$CIRCLE_BUILD_NUM
                     docker tag $IMAGE_NAME:app $IMAGE_NAME:latest
                     docker push $IMAGE_NAME:latest
-                    docker push $IMAGE_NAME
+                    docker push $IMAGE_NAME:$CIRCLE_BUILD_NUM
 
