--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -101,7 +101,7 @@ jobs:
             - run: 
                 name: Login and Publish to Docker Hub
                 command: |
-                    echo "$DOCKERHUB_PASS" | docker login --username sgttabouret --password-stdin
+                    docker login --username sgttabouret --password "$DOCKERHUB_PASS"
                     docker tag $IMAGE_NAME:latest $IMAGE_NAME:$CIRCLE_BUILD_NUM
                     docker tag $IMAGE_NAME:app $IMAGE_NAME:latest
                     docker push $IMAGE_NAME:latest
