--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -108,7 +108,7 @@ jobs:
                 name: Login and Publish to Docker Hub
                 command: |
                     echo "$DOCKERHUB_PASS" | docker login --username sgttabouret --password-stdin 
-                    docker tag $IMAGE_NAME:latest $IMAGE_NAME:$CIRCLE_BUILD_NUM
+                    docker tag $IMAGE_NAME:app $IMAGE_NAME:$CIRCLE_BUILD_NUM
                     docker tag $IMAGE_NAME:app $IMAGE_NAME:latest
                     docker push $IMAGE_NAME:latest
                     docker push $IMAGE_NAME:$CIRCLE_BUILD_NUM
