--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,9 @@ workflows:
             - test:
                 requires:
                     - build
+            - e2e:
+                requires:
+                    - build
 
 jobs:
     build:
@@ -40,4 +43,25 @@ jobs:
             - restore_cache:
                 key: yarn-packages-v2{{ checksum "yarn.lock" }}
             - run: yarn test:ci
+    e2e:
+        docker:
+            - image: cimg/node:12.18
+            environment:
+                DATABASE_URL: "postgres://e2e:test@localhost:5432/psdb"
+                API_PORT: 3000
+                API_HOST: localhost
+                API_PROTOCOL: http
+                JWT_SECRET: yeet
+            - image: circleci/postgres:9.6.2-alpine
+            environment:
+                POSTGRES_USER: e2e
+                POSTGRES_DB: psdb   
+                POSTGRES_PASSWORD: test
+        step:
+          - checkout
+          - restore_cache:
+                key: yarn-packages-v2{{ checksum "yarn.lock" }}
+          - run: dockerize -wait tcp://localhost:5432 -timeout 1m
+          - run: yarn test:e2e
+
      
