--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,11 @@ jobs:
                 POSTGRES_DB: psdb   
                 POSTGRES_PASSWORD: test
         step:
-          - checkout
+            - checkout
+            - restore_cache:
+                key: yarn-packages-v2{{ checksum "yarn.lock" }}
+            - run: dockerize -wait tcp://localhost:5432 -timeout 1m
+            - run: yarn test:e2e
           
 
      
